# rust-xdp-stats

./: .gitignore  Cargo.toml  README.md  README_AYA.md
rust-xdp-stats/: Cargo.toml  build.rs
rust-xdp-stats-common/: Cargo.toml
rust-xdp-stats-common/src/: config.rs  lib.rs  model.rs
rust-xdp-stats-ebpf/: Cargo.toml
rust-xdp-stats-ebpf/src/: main.rs  stats.rs
rust-xdp-stats/src/: main.rs
rust-xdp-stats/src/afxdp/: context.rs
rust-xdp-stats/src/cli/: mod.rs
rust-xdp-stats/src/utils/: mod.rs  rlimit.rs
rust-xdp-stats/src/xdp/: attach.rs  load.rs  mod.rs  stats.rs
