[package]
name = "rust-xdp-stats-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
rust-xdp-stats-common = { path = "../rust-xdp-stats-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.1.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "rust-xdp-stats"
path = "src/main.rs"
